<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/layout_toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="30dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/iv_back"
                android:layout_marginStart="8dp"
                android:text="@string/text_introduction"
                android:textColor="@color/black_1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_done"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@color/glam_blue"
                android:textSize="14sp" />
        </RelativeLayout>
        <EditText
            android:id="@+id/et_introduction"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/layout_toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:gravity="top"
            android:hint="@string/hint_introduction"
            android:textSize="14sp"
            android:textColor="@color/black_1"
            android:background="@android:color/transparent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>